# Elaborato_Corti

./: .gitignore  CMakeLists.txt  README.md
src/: ConcreteObserver.cpp  ConcreteObserver.h  Observer.h  Subject.h  folder.cpp  folder.h  main.cpp  note.cpp  note.h
tst/: test_folder.cpp  test_note.cpp
